--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "sass": "npx node-sass --watch ./src/scss/main.scss ./src/pages/style.css",
+    "sass": "npx node-sass ./src/scss/main.scss ./src/pages/style.css -w",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Grzegorz Makuch",
